Feature/update spring 3.2.5 (#62)
* refactor: repository

* feature: disable http method with annotation MethodNotAllowed

* convert kotlin to java

* improvement in repository concept with service

* Feature/clean architecture (#56)

* refactor: repository

* feature: disable http method with annotation MethodNotAllowed

* convert kotlin to java

* improvement in repository concept with service

* refactor: remover wars

* refactor: rename package

* refactor: modulo clean architecture

* refactor: atualizacao do spring

* refactor: atualizacao do kotlin

* refactor: atualizacao do spring e outras libs

* refactor: sample com clean architecture

* Release/1.3.2 (#57)

* refactor: atualizacao do spring 2.7.3

* refactor: atualizacao da versao para 1.3.2

* type UUID supported

* remove import

* Feature/otimizacoes e desacoplamentos (#59)

* desacoplamento do resource query e view to json

* desacoplamento do resource query e view to json

* desacoplamento do resource query e view to json

* refactor de nomenclatura interna

* remover dependencia da interface Identifier nos Entity do JPA

* remover dependencia da interface Identifier no service

* suporte a bloqueio de resource nao suportado

* documentando suporte ao tipo UUID e seus operadores

* suporte a configuracao i18n atraves de MessageResolver

* refactor para ajustes gerais

* ajustes no processo de build do projeto

* melhoria na configuracao consulta com lower e upper case

* suporte a java 17 e spring boot 3.2.2

* suporte a java 17 e spring boot 3.2.5

* suporte a java 17 e spring boot 3.2.5